[package]
name = "cargo-lichking"
version = "0.8.0"
authors = ["Wim Looman <wim@nemo157.com>"]

description = "Display info about licensing of dependencies"

repository = "https://github.com/Nemo157/cargo-lichking"

readme = "README.md"
keywords = ["cargo", "licensing"]

license = "MIT/Apache-2.0"

edition = "2018"

[dependencies]
clap = { version = "2.33.0", default-features = false, features = ["color", "suggestions"] }
regex = { version = "1.3.4", default-features = false }
itertools = { version = "0.8.2", default-features = false, features = ["use_std"] }
cargo_metadata = { version = "0.9.1", default-features = false }
anyhow = { version = "1.0.26", default-features = false, features = ["std"] }
pretty_env_logger = { version = "0.4.0", default-features = false }
log = { version = "0.4.8", default-features = false }
toml = { version = "0.5.6", default-features = false }
serde = { version = "1.0.104", default-features = false, features = ["derive"] }
